add_executable(test_audio_dac_basic test_audio_dac_basic.cpp)
ToDeviceTest(test_audio_dac_basic test_audio_dac_basic)
target_link_libraries(test_audio_dac_basic PRIVATE audio_dac_impl jungles::os_helpers os_utils serial_logger)

add_executable(test_audio_dac_generates_sine test_audio_dac_generates_sine.cpp)
ToDeviceTest(test_audio_dac_generates_sine test_audio_dac_generates_sine)
target_link_libraries(test_audio_dac_generates_sine PRIVATE audio_dac_impl jungles::os_helpers os_utils serial_logger)